--- a/package.json
+++ b/package.json
@@ -5,16 +5,11 @@
 		"delete": "node build/utils/deleteCommands.js"
 	},
 	"dependencies": {
-		"discord.js": "^14.11.0",
-		"dotenv": "^16.1.4",
-		"fs": "^0.0.1-security"
+		"discord.js": "^14.15.3",
+		"dotenv": "^16.4.5"
 	},
 	"devDependencies": {
-		"@tsconfig/recommended": "^1.0.2",
-		"@typescript-eslint/eslint-plugin": "^5.59.9",
-		"@typescript-eslint/parser": "^5.59.9",
-		"eslint": "^8.42.0",
-		"prettier": "^2.8.8",
-		"typescript": "^5.1.3"
+		"@tsconfig/recommended": "^1.0.7",
+		"typescript": "^5.5.4"
 	}
 }
